--- a/s99-problems/pom.xml
+++ b/s99-problems/pom.xml
@@ -14,7 +14,7 @@
     <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
     <encoding>UTF-8</encoding>
-    <scala-version>2.9.0-1</scala-version>
+    <scala-version>2.9.1</scala-version>
   </properties>
 
   <repositories>
@@ -22,6 +22,11 @@
       <id>scala-tools.org</id>
       <name>Scala-Tools Maven2 Repository</name>
       <url>http://scala-tools.org/repo-releases</url>
+    </repository>
+    <repository>
+      <id>akka.repository</id>
+      <name>Akka Maven Repository</name>
+      <url>http://akka.io/repository</url>
     </repository>
   </repositories>
 
@@ -37,6 +42,11 @@
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
       <version>${scala-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>se.scalablesolutions.akka</groupId>
+      <artifactId>akka-actor</artifactId>
+      <version>1.2</version>
     </dependency>
 
     <!-- Test -->
