--- a/s99-problems/pom.xml
+++ b/s99-problems/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>  
+  <parent>
     <groupId>fr.dboissin.s99</groupId>
     <artifactId>s99</artifactId>
     <version>0.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>s99-problems</artifactId>
-  
+
   <name>${project.artifactId}</name>
 
   <properties>
@@ -46,7 +46,7 @@
     <dependency>
       <groupId>com.typesafe.akka</groupId>
       <artifactId>akka-actor</artifactId>
-      <version>2.0-M2</version>
+      <version>2.0</version>
     </dependency>
 
     <!-- Test -->
